# rbasoundboard

./: .env.example  .gitignore  README.md  docker-compose.yml
audio-processor-service/: CMakeLists.txt  Dockerfile  SSL_SETUP.md
audio-processor-service/src/: audio_conversion.cpp  audio_conversion.h  audio_processor_service.cpp  audio_processor_service.h  audio_processor_service_async.cpp  audio_processor_service_async.h  main.cpp
proto/: audio_processor.proto
soundboard-api/: Dockerfile  pom.xml
soundboard-api/src/main/java/com/soundboard/: SoundboardApiApplication.java
soundboard-api/src/main/java/com/soundboard/config/: FlywayConfig.java  KafkaConfig.java  RateLimitConfig.java  RateLimitInterceptor.java  WebMvcConfig.java
soundboard-api/src/main/java/com/soundboard/controller/: AudioStreamController.java  ClipController.java  FileController.java
soundboard-api/src/main/java/com/soundboard/dto/: ClipDTO.java  UploadResponse.java
soundboard-api/src/main/java/com/soundboard/event/: PlayEvent.java
soundboard-api/src/main/java/com/soundboard/model/: Clip.java  PlayStats.java  Tag.java
soundboard-api/src/main/java/com/soundboard/repository/: ClipRepository.java  PlayStatsRepository.java  TagRepository.java
soundboard-api/src/main/java/com/soundboard/service/: AudioProcessorService.java  AudioStreamSession.java  ClipService.java  PlayEventConsumer.java  PlayEventProducer.java  PlayStatsService.java  ProcessorBusyException.java  StorageService.java  UploadProcessingService.java
soundboard-api/src/main/resources/: application.yml
soundboard-api/src/main/resources/db/migration/: V1__Initial_schema.sql  V2__Add_play_stats_table.sql  V2__Seed_data.sql  V3__Make_original_file_url_nullable.sql
soundboard-api/src/test/java/com/soundboard/: SoundboardApiApplicationTests.java
soundboard-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
soundboard-frontend/src/: App.jsx  App.tsx  index.css
soundboard-frontend/src/components/: ClipCard.tsx  ClipCards.jsx  ColorBends.tsx  ConfirmModal.tsx  GradientBackground.tsx  UploadModal.jsx  UploadModal.tsx
soundboard-frontend/src/services/: api.js  api.ts
